@@ -230,8 +230,6 @@
 			<key>Layout</key>
 			<array>
 				<dict>
-					<key>BecomeActive</key>
-					<true/>
 					<key>ContentConfiguration</key>
 					<dict>
 						<key>PBXBottomSmartGroupGIDs</key>
@@ -269,10 +267,14 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateExpansionKey</key>
 							<array>
 								<string>29B97314FDCFA39411CA2CEA</string>
+								<string>080E96DDFE201D6D7F000001</string>
+								<string>29B97315FDCFA39411CA2CEA</string>
 							</array>
 							<key>PBXSmartGroupTreeModuleOutlineStateSelectionKey</key>
 							<array>
 								<array>
+									<integer>23</integer>
+									<integer>1</integer>
 									<integer>0</integer>
 								</array>
 							</array>
@@ -305,12 +307,14 @@
 					<key>Dock</key>
 					<array>
 						<dict>
+							<key>BecomeActive</key>
+							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>PBXProjectModuleGUID</key>
 								<string>A68EDEBA0F1E1EED00F51FF2</string>
 								<key>PBXProjectModuleLabel</key>
-								<string>CHANGELOG</string>
+								<string>TaskDetailsController.m</string>
 								<key>PBXSplitModuleInNavigatorKey</key>
 								<dict>
 									<key>Split0</key>
@@ -318,11 +322,11 @@
 										<key>PBXProjectModuleGUID</key>
 										<string>A68EDEBB0F1E1EED00F51FF2</string>
 										<key>PBXProjectModuleLabel</key>
-										<string>CHANGELOG</string>
+										<string>TaskDetailsController.m</string>
 										<key>_historyCapacity</key>
 										<integer>0</integer>
 										<key>bookmark</key>
-										<string>A6479658105B7FAC00B9A453</string>
+										<string>A67016421066088C008359A0</string>
 										<key>history</key>
 										<array>
 											<string>A68EE04E0F1E324800F51FF2</string>
@@ -356,8 +360,6 @@
 											<string>A6D300A8102D9B3E00B7BC62</string>
 											<string>A6D300B2102D9B3E00B7BC62</string>
 											<string>A6D300B3102D9B3E00B7BC62</string>
-											<string>A6D300B4102D9B3E00B7BC62</string>
-											<string>A6D300EE102D9B7300B7BC62</string>
 											<string>A6D30115102D9C3C00B7BC62</string>
 											<string>A6D30127102D9CA500B7BC62</string>
 											<string>A66CC19C102EA608000B9EA6</string>
@@ -428,7 +430,6 @@
 											<string>A6D5F44D10416B830098B4D5</string>
 											<string>A6D5F44E10416B830098B4D5</string>
 											<string>A6D5F45110416B830098B4D5</string>
-											<string>A68D08B210416D9900E57327</string>
 											<string>A6FBC7231041724200F16370</string>
 											<string>A6FBC7241041724200F16370</string>
 											<string>A6FBC7251041724200F16370</string>
@@ -456,7 +457,10 @@
 											<string>A676B20F105B7D25006302F5</string>
 											<string>A6324AE6105B7F4700CB8605</string>
 											<string>A6479656105B7FAC00B9A453</string>
-											<string>A676B20B105B7D25006302F5</string>
+											<string>A67016251066082C008359A0</string>
+											<string>A67016261066082C008359A0</string>
+											<string>A670163E1066087B008359A0</string>
+											<string>A670163F1066087B008359A0</string>
 										</array>
 										<key>prevStack</key>
 										<array>
@@ -593,7 +597,14 @@
 											<string>A6D0E4431042E29C006440A3</string>
 											<string>A6BD9E351048F1F3003CEBF6</string>
 											<string>A6324AE7105B7F4700CB8605</string>
-											<string>A6479657105B7FAC00B9A453</string>
+											<string>A67016291066082C008359A0</string>
+											<string>A670162A1066082C008359A0</string>
+											<string>A670162B1066082C008359A0</string>
+											<string>A670162C1066082C008359A0</string>
+											<string>A670162D1066082C008359A0</string>
+											<string>A670162E1066082C008359A0</string>
+											<string>A670162F1066082C008359A0</string>
+											<string>A67016401066087B008359A0</string>
 										</array>
 									</dict>
 									<key>SplitCount</key>
@@ -718,11 +729,11 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A6479659105B7FAC00B9A453</string>
+				<string>A67016311066082C008359A0</string>
 				<string>1CA23ED40692098700951B8B</string>
-				<string>A647965A105B7FAC00B9A453</string>
+				<string>A67016321066082C008359A0</string>
 				<string>A68EDEBA0F1E1EED00F51FF2</string>
-				<string>A647965B105B7FAC00B9A453</string>
+				<string>A67016331066082C008359A0</string>
 				<string>1CA23EDF0692099D00951B8B</string>
 				<string>1CA23EE00692099D00951B8B</string>
 				<string>1CA23EE10692099D00951B8B</string>
@@ -869,14 +880,14 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A62FC93D105B7E3A00621F28</string>
+				<string>A670163610660850008359A0</string>
 				<string>1CCC7628064C1048000F2A68</string>
 				<string>1CCC7629064C1048000F2A68</string>
-				<string>A62FC93E105B7E3A00621F28</string>
-				<string>A62FC93F105B7E3A00621F28</string>
-				<string>A62FC940105B7E3A00621F28</string>
-				<string>A62FC941105B7E3A00621F28</string>
-				<string>A62FC942105B7E3A00621F28</string>
+				<string>A670163710660850008359A0</string>
+				<string>A670163810660850008359A0</string>
+				<string>A670163910660850008359A0</string>
+				<string>A670163A10660850008359A0</string>
+				<string>A670163B10660850008359A0</string>
 			</array>
 			<key>ToolbarConfiguration</key>
 			<string>xcode.toolbar.config.debugV3</string>
