@@ -1,4 +1,7 @@
 
+2009-09-20  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
+	* TaskDetailsController.m: Default due date is start date if there is one.
+
 ==== 1.1 beta 2: 2009-09-12 ====
 
 2009-09-12  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
